added some quick radius controls

--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,7 @@ body {
   text-align: center;
   display: inline;
   opacity: .8;
+  padding: 3px;
   -webkit-backface-visibility: hidden;
   /* Prevents flickering */
 
